Samples
	* Fixed a UI rendering bug in the SampleFramework.

DXGI
	* Added missing result code.

Direct3D 9
	* Fixed pinning of UVAtlas callbacks.

Direct3D 11
	* Added missing UnorderedAccessViewBufferFlags flag.
	* Removed invalid range checks from FFT AttachBuffersAndPrecompute