@@ -65,6 +65,18 @@ namespace Direct3D11
 	{
 		return RECORD_D3D11( m_Pointer->SetFloatVector( reinterpret_cast<float*>( &value ) ) );
 	}
+
+	Result EffectVectorVariable::Set( int x, int y, int z, int w )
+	{
+		int data[] = {x, y, z, w};
+		return RECORD_D3D11(m_Pointer->SetIntVector(data));
+	}
+
+	Result EffectVectorVariable::Set( bool x, bool y, bool z, bool w )
+	{
+		BOOL data[] = {x, y, z, w};
+		return RECORD_D3D11(m_Pointer->SetBoolVector(data));
+	}
 	
 	Result EffectVectorVariable::Set( array<Vector4>^ values )
 	{
